Create endpoint details customer
