# docs/swagger.json
@@ -127,6 +127,55 @@
                     }
                 }
             }
+        },
+        "/customers/{id}": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Menampilkan detail customer berdasarkan ID",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Customer"
+                ],
+                "summary": "Mendapatkan detail customer",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Customer ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.CustomerDetailResponseWrapper"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorBadRequestResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/responses.ErrorNotFoundResponse"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -239,6 +288,22 @@
                 "secretKey": {
                     "type": "string",
                     "example": "s3cr3tK3y"
+                }
+            }
+        },
+        "responses.CustomerDetailResponseWrapper": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 200
+                },
+                "data": {
+                    "$ref": "#/definitions/responses.CustomerResponse"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Success"
                 }
             }
         },
@@ -408,6 +473,23 @@
                 "message": {
                     "type": "string",
                     "example": "Conflict"
+                }
+            }
+        },
+        "responses.ErrorNotFoundResponse": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer",
+                    "example": 404
+                },
+                "error": {
+                    "type": "string",
+                    "example": "resource not found"
+                },
+                "message": {
+                    "type": "string",
+                    "example": "Not Found"
                 }
             }
         },
