# internal/infrastructure/dtos/responses/swagger.go
@@ -80,3 +80,8 @@ type SuccessNoContentResponse struct {
 
 type CustomerRegisterResponseWrapper SuccessCreatedResponse[CustomerResponse]
 type CustomerListResponseWrapper SuccessOKResponse[[]CustomerResponse]
+type CustomerDetailResponseWrapper SuccessOKResponse[CustomerResponse]
+
+type VehicleRegisterResponseWrapper SuccessCreatedResponse[VehicleResponse]
+type VehicleListResponseWrapper SuccessOKResponse[[]VehicleResponse]
+type VehicleDetailResponseWrapper SuccessOKResponse[VehicleResponse]
