# internal/infrastructure/http/handlers/customer.go
@@ -1,6 +1,8 @@
 package handlers
 
 import (
+	"strconv"
+
 	"github.com/gofiber/fiber/v2"
 
 	"github.com/bagasunix/gosnix/internal/domain/service"
@@ -75,5 +77,44 @@ func (c *CustomerHandler) GetAllCustomer(ctx *fiber.Ctx) error {
 	if response.Errors != "" {
 		return ctx.Status(response.Code).JSON(response)
 	}
+	return ctx.Status(response.Code).JSON(response)
+}
+
+// ViewCustomer godoc
+// @Summary Mendapatkan detail customer
+// @Description Menampilkan detail customer berdasarkan ID
+// @Tags Customer
+// @Accept  json
+// @Produce  json
+// @Param   id   path int true "Customer ID"
+// @Success 200 {object} responses.CustomerDetailResponseWrapper
+// @Failure 400 {object} responses.ErrorBadRequestResponse
+// @Failure 404 {object} responses.ErrorNotFoundResponse
+// @Router /customers/{id} [get]
+// @Security BearerAuth
+func (c *CustomerHandler) ViewCustomer(ctx *fiber.Ctx) error {
+	request := new(requests.EntityId)
+	var response responses.BaseResponse[*responses.CustomerResponse]
+
+	id := ctx.Params("id")
+	if id == "" {
+		response.Code = fiber.StatusBadRequest
+		response.Message = "Invalid request"
+		response.Errors = "ID tidak ditemukan"
+		return ctx.Status(fiber.StatusBadRequest).JSON(response)
+	}
+	if _, err := strconv.Atoi(id); err != nil {
+		response.Code = fiber.StatusBadRequest
+		response.Message = "Invalid request"
+		response.Errors = "ID harus berupa angka"
+		return ctx.Status(response.Code).JSON(response)
+	}
+
+	request.Id = id
+	response = c.service.ViewCustomer(ctx.Context(), request)
+	if response.Errors != "" {
+		return ctx.Status(response.Code).JSON(response)
+	}
+
 	return ctx.Status(response.Code).JSON(response)
 }
