# internal/infrastructure/http/router/customer.go
@@ -9,4 +9,5 @@ import (
 func SetupCustomerRoutes(router fiber.Router, handler *handlers.CustomerHandler) {
 	router.Get("", handler.GetAllCustomer)
 	router.Post("", handler.Create)
+	router.Get(":id", handler.ViewCustomer)
 }
